[gd_scene load_steps=4 format=3 uid="uid://dmi0m6rqpjrey"]

[ext_resource type="FontFile" uid="uid://ddtjckq3aqygk" path="res://assets/PERFORMANCE.ttf" id="1_66uix"]
[ext_resource type="Script" uid="uid://mew3ooqt7jfk" path="res://code/main_menu_gui.gd" id="1_fdghb"]

[sub_resource type="LabelSettings" id="LabelSettings_fdghb"]
font = ExtResource("1_66uix")
font_size = 50

[node name="MainMenuGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdghb")

[node name="TitleBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 125
theme_override_constants/margin_top = 100

[node name="VFlowContainer" type="VFlowContainer" parent="TitleBox"]
layout_mode = 2

[node name="title" type="Label" parent="TitleBox/VFlowContainer"]
layout_mode = 2
text = "caca
games"
label_settings = SubResource("LabelSettings_fdghb")
horizontal_alignment = 2

[node name="version" type="Label" parent="TitleBox/VFlowContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_66uix")
text = "v0.1"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 125

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Funni" type="Button" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_66uix")
theme_override_font_sizes/font_size = 25
text = "ro-ta-te go brr"

[node name="ButtonBoxBelow" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="ButtonBoxBelow"]
layout_mode = 2

[node name="Panel" type="Panel" parent="ButtonBoxBelow/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ButtonBoxBelow/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2035823, 0.3155772, 0.78901744, 0.24705882)

[node name="HFlowContainer" type="HFlowContainer" parent="ButtonBoxBelow/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 25
alignment = 1

[node name="Play" type="Button" parent="ButtonBoxBelow/MarginContainer/HFlowContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_66uix")
theme_override_font_sizes/font_size = 25
text = "Play"

[node name="Settings" type="Button" parent="ButtonBoxBelow/MarginContainer/HFlowContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_66uix")
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="Exit" type="Button" parent="ButtonBoxBelow/MarginContainer/HFlowContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_66uix")
theme_override_font_sizes/font_size = 25
text = "Exit"

[connection signal="pressed" from="MarginContainer/CenterContainer/Funni" to="." method="_on_funni_pressed"]
[connection signal="pressed" from="ButtonBoxBelow/MarginContainer/HFlowContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonBoxBelow/MarginContainer/HFlowContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonBoxBelow/MarginContainer/HFlowContainer/Exit" to="." method="_on_exit_pressed"]
